--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </thead>
         <tbody>
             <tr>
-                <td><BinaryArduino/td>
+                <td>BinaryArduino</td>
                 <td>Input binary segment on an arduino and will give you back what it equals to on the ASCII table</td>
                 <td><a href="BinaryArduino.html">Binary Arduino Project</a></td>
             </tr>
