--- a/BinaryArduino.html
+++ b/BinaryArduino.html
@@ -8,10 +8,10 @@
 <body>
     <h1>Binary Arduino Project</h1>
     <p>This is my first real arduino project I am creating from scratch. The purpose of this project is to enhance
-        my c++ and arduino skills. I want to have 2 buttons, one for 0 and another for 1. This will correspond to 
+        my c++ and arduino skills. I want to have 2 buttons, one for 0 and another for 1.<br> This will correspond to 
         binary digits. I will then have it be converted to the corresponding element in the ASCII table which 
-        will then be printed onto an LCD screen. I may further add more buttons such as an enter button so that I can
-        add multiple lines of binary strings so i can create words/sentences. I will also have to create another button
+        will then be printed onto an LCD screen.<br> I may further add more buttons such as an enter button so that I can
+        add multiple lines of binary strings so I can create words/sentences. I will also have to create another button
         that will be used for deletion of that data so I can create a fresh string. 
     </p>
 </body>
