--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<DOCTYPE! html>
+<!DOCTYPE html>
 <html lang = "en">
 <head>
     <meta charset="UTF-8">
@@ -7,7 +7,15 @@
 </head>
 <body>
     <h1>My Project Portfolio</h1>
-    <table border = "1" cellpadding = "10">
+
+    <nav>  
+        <a href ="index.html">Main Page</a>
+        <a href ="BinaryArduino.html">Project 1</a>
+    </nav> 
+
+    <br>
+
+    <table border = "1" cellpadding = "5">
         <thead>
             <tr>
                 <th>Project Name</th>
