--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 <body>
     <h1>My Project Portfolio</h1>
 
-    <nav>  
-        <a href ="index.html">Main Page</a>
-        <a href ="BinaryArduino.html">Project 1</a>
-    </nav> 
+    <nav style="margin-bottom: 20px;">
+        <a href="index.html" style="margin-right: 20px; text-decoration: none; color: #0077cc;">Main Page</a>
+        <a href="BinaryArduino.html" style="text-decoration: none; color: #0077cc;">Project 1</a>
+    </nav>
+    
 
     <br>
 
