--- a/BinaryArduino.html
+++ b/BinaryArduino.html
@@ -9,12 +9,29 @@
     <h1>Binary Arduino Project</h1>
 
     <nav style="margin-bottom: 20px;">
-        <a href="index.html" style="margin-right: 20px; text-decoration: none; color: #0077cc;">Main Page</a>
-        <a href="BinaryArduino.html" style="text-decoration: none; color: #0077cc;">Project 1</a>
+        <a href="index.html"> Main Page </a>
+        <a href="BinaryArduino.html"> Project 1 </a>
     </nav>
     
 
     <br>
+
+    <table border = "1" cellpadding = "10">
+        <thead>
+            <tr>
+                <th>Project Name</th>
+                <th>Description</th>
+                <th>Link</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>BinaryArduino</td>
+                <td>Input binary segment on an arduino and will give you back what it equals to on the ASCII table</td>
+                <td><a href="BinaryArduino.html">Binary Arduino Project</a></td>
+            </tr>
+        </tbody>
+    </table>
 
     <p>This is my first real arduino project I am creating from scratch. The purpose of this project is to enhance
         my c++ and arduino skills. I want to have 2 buttons, one for 0 and another for 1.<br> This will correspond to 
