--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <h1>My Project Portfolio</h1>
 
     <nav style="margin-bottom: 20px;">
-        <a href="index.html" style="margin-right: 20px; text-decoration: none; color: #0077cc;">Main Page</a>
-        <a href="BinaryArduino.html" style="text-decoration: none; color: #0077cc;">Project 1</a>
+        <a href="index.html"> Main Page </a>
+        <a href="BinaryArduino.html"> Project 1 </a>
     </nav>
     
 
     <br>
 
-    <table border = "1" cellpadding = "5">
+    <table border = "1" cellpadding = "10">
         <thead>
             <tr>
                 <th>Project Name</th>
